# grpc_header_routing

./: .gitignore  CLAUDE.md  KICKOFF.md  README.md  REQUIREMENTS.md  SUMMARY.md  VERDICT.md  experiment.md  setup-ab.sh
.claude/: settings.local.json
.claude/skills/cpp-production-readiness/: SKILL.md
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-projectmeta-returns-projresult-no-throw.md  1-10-build-time-negative-codegen-gate-proven-by-fixtures.md  1-11-receiver-digest-gate-regression.md  1-12-canonical-projection-crypto-vectors-regression-guarded.md  1-13-parser-robustness-lenient-no-crash.md  1-14-thread-safe-re-entrant-projection.md  1-15-live-docs-match-the-code.md  1-2-overflow-surfaces-as-non-blocking-data.md  1-3-one-coherent-routingmeta-namespace-resolved-by-adl.md  1-4-one-branchless-routingmeta-send-lives-in-the-kit.md  1-5-single-source-the-hpack-overhead-constant.md  1-6-projectmeta-self-times-and-reports-duration.md  1-7-bench-projection-proves-sub-millisecond.md  1-8-portable-build-no-machine-specific-paths.md  1-9-proven-on-a-pinned-ci-matrix.md  2-1-real-wire-grpc-demo.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: PRD.md  epics.md  implementation-readiness-report-2026-06-27.md  implementation-readiness-report-2026-06-28.md
_bmad-output/planning-artifacts/architecture/architecture-gprc_header_routing-2026-06-27/: .memlog.md  ARCHITECTURE-SPINE.md
_bmad-output/planning-artifacts/architecture/architecture-gprc_header_routing-2026-06-27/reviews/: review-reconcile-brief-prd.md  review-reconcile-spec-code.md
archived/: progress.md
design-docs/: 01_generic_process_domain_model.md  02_grpc_routing_metadata_spec.md
docs/superpowers/plans/: 2026-06-27-productionize-grpc-routing-meta.md  2026-06-29-optional-digest.md
docs/superpowers/specs/: 2026-06-27-productionize-grpc-routing-meta-design.md
grpc-routing-meta/: .clang-format  .gitignore  CONTEXT.md  DEMO.md  OVERVIEW.revised.zh.md  OVERVIEW.zh.md  READINESS.md  README.md  SPEC.md
grpc-routing-meta/archive/: 00_design_assumptions.md  02_grpc_routing_metadata_spec.md  03_codegen_walkthrough.md  EA_DESIGN_SUMMARY.md
grpc-routing-meta/docs/adr/: 0001-all-cpp-no-cross-language-contract.md  0001-send-ownership-stays-in-sender.md  0002-digest-is-integrity-not-security.md  0002-optional-process-context-digest.md  0003-omit-routing-selector-headers.md  README.md
grpc-routing-meta/example/: .clang-tidy  CMakeLists.txt  TESTING.md  build.sh  coverage.sh  format-check.sh
grpc-routing-meta/example/demo/: DEMO.md  grpc_client.cc  grpc_server.cc  run.sh
grpc-routing-meta/example/grpc_demo/: routing_client.cc  routing_server.cc  run.sh
grpc-routing-meta/example/proto/: metadata_options.proto  process_context.proto  sys1.proto  sys2.proto  sys3.proto
grpc-routing-meta/example/receiver/: receiver_verify.cc
grpc-routing-meta/example/sender/: unified_sender.cc
grpc-routing-meta/example/src/common/: common_headers.h  metadata_sink.h  process_context_emit.h  process_context_parser.h  proj_result.h  send.h  sha256.h  url_encode.h
grpc-routing-meta/example/src/plugin/: protoc-gen-meta.cc
grpc-routing-meta/example/tests/: bench_projection.cc  grpc_smoke.cc  lsan.supp  test_concurrency.cc  test_projection.cc
grpc-routing-meta/example/tests/negative/: bad_dup_key.proto  bad_duplicate_key.proto  bad_message_project.proto  bad_project_under_repeated.proto  bad_repeated_scalar.proto
header-kit/: CONTEXT.md  PROPOSAL.md  README.md  REQUIREMENTS.md  SUMMARY.md  core-diagram.txt
header-kit/common/: sha256.h  url_encode.h
header-kit/plugin/: protoc-gen-meta.cc
header-kit/proto/: example_apc_batch.proto  header_options.proto  metadata_options.proto  request.proto
header-kit/sample-plugin/: header_gen_plugin.cc
header-kit/sample-reflection/: header_gen_reflection.cc
refs/: BRIEF.md  CONTEXT.md  OVERVIEW.zh.md  SPEC.md  plan.md
